# Dronzer

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  FUNDING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.prod.yml  docker-compose.yml  fetch_logs.py  start-dronzer.bat  supervisord.conf  test_mock.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
backend/scripts/: patch_model_metadata.py  seed_free_providers.py  seed_test_data.py
backend/src/dronzer/api/: middleware.py
backend/src/dronzer/api/openapi/: spec.py
backend/src/dronzer/api/routers/: cluster.py  enterprise.py  integration.py  knowledge.py  workflows.py
backend/src/dronzer/api/v1/: health.py
backend/src/dronzer/application/admin/: auth.py
backend/src/dronzer/application/config/: manager.py
backend/src/dronzer/application/events/: bus.py  hooks.py
backend/src/dronzer/application/extensions/: loader.py  registry.py  sandbox.py
backend/src/dronzer/application/observability/: metrics.py  tracing.py
backend/src/dronzer/application/orchestration/: capability.py  circuit_breaker.py  context.py  cost.py  decision.py  failover.py  health.py  key_rotation.py  metrics.py  model.py  pipeline.py  plugin.py  postgres_metrics.py  provider.py  retry.py  routing.py
backend/src/dronzer/application/registry/: provider.py
backend/src/dronzer/application/worker/: queue.py  scheduler.py
backend/src/dronzer/core/: config.py  dependencies.py  exceptions.py  logging.py  main.py
backend/src/dronzer/domain/: constants.py
backend/src/dronzer/domain/admin/: rbac.py
backend/src/dronzer/domain/agents/: collaboration.py  executor.py  memory.py  security.py  tools.py
backend/src/dronzer/domain/enterprise/: audit.py  billing.py  governance.py  identity.py  notifications.py  policy.py  quotas.py  rbac.py  reporting.py  tenant.py  vault.py  workflows.py
backend/src/dronzer/domain/integration/: bus.py  observability.py
backend/src/dronzer/infrastructure/: cache.py
backend/tests/: conftest.py
backend/tests/e2e/: test_gateway_flow.py
backend/tests/unit/: test_admin.py  test_api.py  test_config.py  test_core.py  test_health.py  test_orchestration.py  test_providers.py
frontend/: Dockerfile  (+3 more)
(+254 files in other folders)
