[project]
name = "dronzer"
version = "1.0.0"
description = "Enterprise-grade, open-source, self-hosted AI Gateway"
authors = [
    {name = "Dronzer Team", email = "team@dronzer.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "orjson>=3.10.0",
    "prometheus-client>=0.20.0",
    "redis==5.0.3",
    "cryptography==42.0.5",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.2",
    "croniter>=2.0.0",
    "jinja2>=3.1.3",
    "kopf>=1.37.2",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "coverage>=7.4.4",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "testcontainers>=4.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dronzer"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "__pycache__",
    "backend/src/dronzer/infrastructure/database/migrations",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501", "B008", "E712", "B904", "C901", "B007", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    "migrations/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
